# keycloak-api

./: .gitignore  Dockerfile  access_token.py  common.py  events.py  kc_certificates.py  kc_groups.py  keycloak_users.py  main.py  metrics.py  pyproject.toml  requirements.txt
src/: access_token.py  common.py  events.py  exel.py  kc_certificates.py  main.py  pyproject.toml
src/metrics/: metrics_model.py
src/models/: client_models.py  settings_model.py
vars/: ca.crt  creds template.py  env_vars_template.py
